[first-steps] data-types: update concatenação

--- a/src/app/modules/first-steps/data-types/string-type/intro-string-type/intro-string-type.component.html
+++ b/src/app/modules/first-steps/data-types/string-type/intro-string-type/intro-string-type.component.html
@@ -5,7 +5,7 @@
         Na computação chamamos esses dados de tipo <strong>string</strong>! Em ruby qualquer valor que for declarado entre aspas será tratado como do tipo string.
     </p>
 
-    <div class="container-dark b-radius mb-2">
+    <div class="ard-terminal mb-2">
       <code>
         <i class="var">email</i> = 'ard@email.com'<br>
         <i class="command">puts</i><i class="var"> email</i><br>
@@ -18,10 +18,10 @@
       Perceba que variáveis do tipo string podem ser declaradas com aspas simples ('') ou duplas ("").
       A delcaração por meio de aspas simples chega a ser um pouco mais perfomática pois a verificação
       da presença de <i><strong>interpolação</strong></i> <i>-- em breve falarei sobre isso --</i> não é feita. Mas a
-      alternativa a declaração de variáveis com aspas duplas tem sua finalidade. Análise o código abaixo:
+      alternativa a declaração de variáveis com aspas duplas tem suas finalidades. Análise o código abaixo:
     </p>
 
-    <div class="container-dark b-radius mb-2">
+    <div class="ard-terminal mb-2">
       <code>
         <i class="var">district</i> = 'Caixa D'água'<br>
         <i class="command">puts</i><i class="var"> district</i><br>
@@ -40,7 +40,7 @@
       recorrer a declaração de strings com aspas duplas.
     </p>
 
-    <div class="container-dark b-radius mb-2">
+    <div class="ard-terminal">
       <code>
         <i class="var">district</i> = "Caixa D'água"<br>
         <i class="command">puts</i><i class="var"> district</i><br>
