--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <div class="sidebar-logo">
       <a routerLink="">
         <img [src]="logo" alt="logo">
-        <h1>AUX-RUBY-DOC</h1>
+        <h1>AuxRubyDoc</h1>
       </a>
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
