[data-types] string: update string-interpolation

--- a/src/app/modules/first-steps/data-types/data-types.component.html
+++ b/src/app/modules/first-steps/data-types/data-types.component.html
@@ -22,17 +22,21 @@
   <app-strong-and-dynamic-typing></app-strong-and-dynamic-typing>
 
   <section nz-row>
-    <nz-collapse nzAccordion class="ard-bg-primary">
+    <nz-collapse nzAccordion>
 
-      <nz-collapse-panel nzHeader="String: trabalhando com caracteres">
+      <nz-collapse-panel nzHeader="Trabalhando com caracteres: String">
         <app-string-type></app-string-type>
       </nz-collapse-panel>
 
-      <nz-collapse-panel nzHeader="Number: trabalhando com números...">
+      <nz-collapse-panel nzHeader="Trabalhando com números inteiros: Integer">
         <p>Em construção...</p>
       </nz-collapse-panel>
 
-      <nz-collapse-panel nzHeader="Boolean: trabalhando com booleanos...">
+      <nz-collapse-panel nzHeader="Trabalhando com números fracionários: Float">
+        <p>Em construção...</p>
+      </nz-collapse-panel>
+
+      <nz-collapse-panel nzHeader="Trabalhando com valores booleanos: TrueClass e FalseClass">
         <p>Em construção...</p>
       </nz-collapse-panel>
     </nz-collapse>
