[welcome] update content

--- a/src/app/modules/welcome/about-ruby/what-is-ruby/what-is-ruby.component.html
+++ b/src/app/modules/welcome/about-ruby/what-is-ruby/what-is-ruby.component.html
@@ -18,7 +18,7 @@
 
   <div class="mt-2 col-12 col-sm-12 col-md-12 c0l-lg-12">
     <p class="text-center">
-      <img src="https://i.ibb.co/jgB2fx1/logoRuby.png" class="img-fluid">
+      <img [src]="logoRuby" class="img-fluid">
     </p>
     <h3 class="text-center txt-primary"><strong>A melhor amiga do programador!</strong></h3>
   </div>
@@ -32,6 +32,29 @@
       <a [href]="linkSmalltalk" target="blank"><i>Smalltalk</i></a>,
       <a [href]="linkEiffel" target="blank"><i>Eiffel</i></a>, e
       <a [href]="linkAda" target="blank"><i>Ada</i></a>.
+    </p>
+
+    <p>
+      Nos primeiros anos de vida de ruby ela ficou praticamente restrita ao país de sua origem
+      e só por volta dos anos 2000 chegou aos EUA (Estados Unidos da América).
+      O marco principal dessa introdução do ruby ao EUA ocorreu em setembro de 2000, quando o
+      primeiro livro em inglês, <i>Programming Ruby</i>, foi publicado. Então ruby começou
+      a fazer sucesso e como o inglês é a língua universal conseguiu chegar a outras nações.
+    </p>
+
+    <p>
+      Em 2005 nasce o revolucionário <strong>Ruby on Rails (Rails ou RoR)</strong>, o super framework para o
+      desenvolvimento de aplicações web escritas em ruby. O próprio <i>Ruby on Rails</i> foi
+      escrito em ruby. Provavelmente você se interessou em ruby porque ouviu falar sobre a
+      Rails, ele realmente é uma ferramenta diferenciada que consegue aumentar a produtividade
+      de seus adeptos e deixar o processo de desenvolvimento de aplicações mais divertido.
+      Mas o foco aqui será a linguagem ruby. Depois que tiver uma boa base sobre ruby
+      terá enorme facilidade em trabalha com o <i>Rails</i>.
+    </p>
+
+    <p>
+      O rails atraiu muitos olhares e como consequência o ruby também.
+      A partir desse período a linguagem se popularizou e ganhou destaque no cenário mundial.
     </p>
 
     <p>
