--- a/src/app/modules/welcome/about-ruby/multiparadigma/multiparadigma.component.html
+++ b/src/app/modules/welcome/about-ruby/multiparadigma/multiparadigma.component.html
@@ -2,10 +2,7 @@
   <h4>Multiparadigma...</h4>
   <div class="mt-2 col-12 col-sm-12 col-md-12 col-lg-12">
     <p>
-      Paradigma nada mais é do que um estilo de programação.
-    </p>
-    <p>
-      Uma linguagem multiparadigma caracteriza-se por agrupar mais de um paradigma de programação para assim melhor atender as
+      Paradigma nada mais é do que um estilo de programação. Uma linguagem multiparadigma caracteriza-se por agrupar mais de um paradigma de programação para assim melhor atender as
       nossas necessidades, dessa forma, podemos trabalhar com vário estilos de programação usando uma única linguagem.
     </p>
     <p>
@@ -17,19 +14,16 @@
       Diversas linguagens de programação foram projetadas seguindo esse paradigma. Algumas catacterísticas das linguagens imperativas
       são o uso de variáveis, atribuição de valores e fluxo de execução sequencial de comandos.
     </p>
-    <button class="btn btn-warning mb-3">Leia mais</button>
 
     <p>
       <strong class="txt-primary">Funcional:</strong> é um paradigma de programação baseado em chamadas
       de funções e que evita estados ou dados mutáveis. Prega pelo uso de constantes e não de variáveis, é declarativa e não imperativa.
       Atualmente, é um dos paradigmas de programação mais populares.
     </p>
-    <button class="btn btn-warning mb-3">Leia mais</button>
 
     <p>
       <strong class="txt-primary">Orientado a objetos:</strong> é um paradigma de programação que visa representar o mundo natural dentro do mundo computacional.
       Algumas de suas características são o uso de classes, herança, polimorfismo, interfaces etc. Ruby é uma linguagem puramente orientada a objetos, tratando tudo como um objeto.
     </p>
-    <button class="btn btn-warning mb-3">Leia mais</button>
   </div>
 </div>
