--- a/src/app/modules/welcome/about-ruby/what-is-ruby/what-is-ruby.component.html
+++ b/src/app/modules/welcome/about-ruby/what-is-ruby/what-is-ruby.component.html
@@ -46,19 +46,19 @@
       Em 2005 nasce o revolucionário <strong>Ruby on Rails (Rails ou RoR)</strong>, o super framework para o
       desenvolvimento de aplicações web escritas em ruby. O próprio <i>Ruby on Rails</i> foi
       escrito em ruby. Provavelmente você se interessou em ruby porque ouviu falar sobre a
-      Rails, ele realmente é uma ferramenta diferenciada que consegue aumentar a produtividade
+      <i>Rails</i>, ele realmente é uma ferramenta diferenciada que consegue aumentar a produtividade
       de seus adeptos e deixar o processo de desenvolvimento de aplicações mais divertido.
       Mas o foco aqui será a linguagem ruby. Depois que tiver uma boa base sobre ruby
-      terá enorme facilidade em trabalha com o <i>Rails</i>.
+      terá enorme facilidade em trabalhar com o <i>Rails</i>.
     </p>
 
     <p>
-      O rails atraiu muitos olhares e como consequência o ruby também.
+      O <i>rails</i> atraiu muitos olhares e como consequência o ruby também.
       A partir desse período a linguagem se popularizou e ganhou destaque no cenário mundial.
     </p>
 
     <p>
-      Projetada para ser uma linguagem de programação produtiva e que carrega um conjunto de características, como:
+      Ela foi projetada para ser uma linguagem de programação produtiva e para carregar um conjunto de características, como:
       multiparadigma, interpretada,tipagem dinâmica, tipagem forte, portabilidade, legibilidade, redigibilidade etc.
     </p>
   </div>
