--- a/src/app/modules/first-steps/data-types/data-types.component.html
+++ b/src/app/modules/first-steps/data-types/data-types.component.html
@@ -29,7 +29,7 @@
       </nz-collapse-panel>
 
       <nz-collapse-panel nzHeader="Trabalhando com números inteiros: Integer">
-        <p>Em construção...</p>
+        <app-integer></app-integer>
       </nz-collapse-panel>
 
       <nz-collapse-panel nzHeader="Trabalhando com números fracionários: Float">
