[modules->first-steps]: add type float

--- a/src/app/modules/first-steps/data-types/data-types.component.html
+++ b/src/app/modules/first-steps/data-types/data-types.component.html
@@ -33,7 +33,7 @@
       </nz-collapse-panel>
 
       <nz-collapse-panel nzHeader="Trabalhando com números fracionários: Float">
-        <p>Em construção...</p>
+        <app-float></app-float>
       </nz-collapse-panel>
 
       <nz-collapse-panel nzHeader="Trabalhando com valores booleanos: TrueClass e FalseClass">
