[modules->first-steps]: add types true and false

--- a/src/app/modules/first-steps/data-types/data-types.component.html
+++ b/src/app/modules/first-steps/data-types/data-types.component.html
@@ -37,7 +37,7 @@
       </nz-collapse-panel>
 
       <nz-collapse-panel nzHeader="Trabalhando com valores booleanos: TrueClass e FalseClass">
-        <p>Em construção...</p>
+        <app-booleans></app-booleans>
       </nz-collapse-panel>
     </nz-collapse>
 
