--- a/src/app/modules/first-steps/data-types/float/float.component.html
+++ b/src/app/modules/first-steps/data-types/float/float.component.html
@@ -2,7 +2,7 @@
 
 <p>
   Um tipo de dado que representa os números de ponto flutuantes ou fracionários. Alguns exemplos de valores do
-  tipo <i>Float</i> são: 34.90, -23.45, 93284.432, -2343.43, 24.12, 5343.91 etc.
+  tipo <i>Float</i> são: 34.90, -23.45, 93284.432, -2343.43, 24.12, 5343.91 etc. Detalhe, use sempre o . (ponto) ao invés da . (vírgula);
 </p>
 
 <div class="ard-terminal">
