--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,15 +12,16 @@
       </a>
     </div>
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
+      <!-- <app-menu></app-menu> -->
       <li nz-submenu nzOpen nzTitle="Início" nzIcon="home">
         <ul>
-          <li nz-menu-item nzMatchRouter>
+          <li nz-menu-item>
             <a routerLink="/welcome">ARD</a>
           </li>
-          <li nz-menu-item nzMatchRouter>
+          <li nz-menu-item>
             <a routerLink="/welcome/ruby">Ruby</a>
           </li>
-          <li nz-menu-item nzMatchRouter>
+          <li nz-menu-item>
             <a routerLink="/first_steps">Primeiros passos</a>
           </li>
         </ul>
@@ -28,7 +29,7 @@
 
       <li nz-submenu nzOpen nzTitle="Array" nzIcon="form">
         <ul>
-          <li nz-menu-item nzMatchRouter>
+          <li nz-menu-item>
             <a routerLink="array/introduction">Introdução</a>
           </li>
         </ul>
