update: first-steps, button-phases, interpred etc

--- a/src/app/modules/welcome/about-ruby/interpred/interpred.component.html
+++ b/src/app/modules/welcome/about-ruby/interpred/interpred.component.html
@@ -1,5 +1,5 @@
 <div class="row mb-5">
-  <h4>Interpretada...</h4>
+  <h4 class="txt-primary">Interpretada...</h4>
   <div class="mt-2 col-12 col-sm-12 col-md-12 col-lg-12">
     <p>
       Os dispositivos que programamos não entendem a nossa língua, eles conversam através de linguagem de baixo nível ou linguagem de máquina.
