--- a/src/app/modules/welcome/about-ruby/what-is-ruby/what-is-ruby.component.html
+++ b/src/app/modules/welcome/about-ruby/what-is-ruby/what-is-ruby.component.html
@@ -1,6 +1,6 @@
 <div class="row mb-5">
   <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-    <h1 class="container-primary">O que é a linguagem ruby?</h1>
+    <h1 class="container-primary ard-b-rouded-5">O que é a linguagem ruby?</h1>
   </div>
   <div class="col-12 col-sm-12 col-md-12 col-lg-12">
 
