--- a/src/app/modules/welcome/about-ruby/who-use/who-use.component.html
+++ b/src/app/modules/welcome/about-ruby/who-use/who-use.component.html
@@ -1,5 +1,5 @@
 <div class="row mt-2">
-  <h4>Quem usa ruby?</h4>
+  <h4 class="txt-primary">Quem usa ruby?</h4>
   <div class="col-md-12">
     <p>
       Ruby é uma linguagem de propósito geral, muito madura e provada no mercado, sendo utilizada para construção de diversas soluções tecnológicas.
