--- a/src/app/modules/welcome/about-ruby/multiparadigma/multiparadigma.component.html
+++ b/src/app/modules/welcome/about-ruby/multiparadigma/multiparadigma.component.html
@@ -1,5 +1,5 @@
 <div class="row mb-5">
-  <h4>Multiparadigma...</h4>
+  <h4 class="txt-primary">Multiparadigma...</h4>
   <div class="mt-2 col-12 col-sm-12 col-md-12 col-lg-12">
     <p>
       Paradigma nada mais é do que um estilo de programação. Uma linguagem multiparadigma caracteriza-se por agrupar mais de um paradigma de programação para assim melhor atender as
